# CS100-DeviantChess

./: .gitignore  .gitmodules  AIStrategy.cpp  AIStrategy.h  Board.cpp  Board.h  CMakeLists.txt  ChessObject.cpp  ChessObject.h  Piece.cpp  Piece.h  README.md  checkmate_stalemate_test.hpp  main.cpp
tests/: checkmate_stalemate_test.hpp  generate_FEN_test.hpp  get_legal_moves_test.hpp  is_in_check_test.hpp  unit_tests.cpp  updateBoardTest.h
